[package]
name = "entro"
version = "0.0.2"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/manorajesh/entro"
repository = "https://github.com/manorajesh/entro"
keywords = ["cli", "hex", "frequency", "reader", "character"]
categories = ["command-line-utilities"]
description = "Program to count character frequency from STDIN"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
num = "0.4.0"